# typtr

./: .gitignore  LICENSE  Makefile  README.md
src/: CMakeLists.txt  dconv.c  file_util.c  file_util.h  keys.c  keys.h  main.c  sl.h  stats.c  stats.h  term_handler.c  term_handler.h  text.c  text.h  wordlist.c  wordlist.h
